openshift/api/tempdc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu, memory request for
        container ocp101-demo; cpu, memory limit for container ocp101-demo'
      openshift.io/deployment-config.latest-version: "2"
      openshift.io/deployment-config.name: ocp101-demo
      openshift.io/deployment.name: ocp101-demo-2
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: restricted
    creationTimestamp: 2020-03-12T20:37:55Z
    generateName: ocp101-demo-2-
    labels:
      app: ocp101-demo
      deployment: ocp101-demo-2
      deploymentconfig: ocp101-demo
    name: ocp101-demo-2-vfnk7
    namespace: ocp101a-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicationController
      name: ocp101-demo-2
      uid: 406d0e95-64a1-11ea-b2ea-005056832285
    resourceVersion: "1654887281"
    selfLink: /api/v1/namespaces/ocp101a-dev/pods/ocp101-demo-2-vfnk7
    uid: 5a7bc707-64a1-11ea-bbab-0050568348cc
  spec:
    containers:
    - image: docker-registry.default.svc:5000/ocp101a-tools/ocp101-demo@sha256:d01b7dcd1d8c710ce0c1cd6f4b0d22ff560d8dbbebc0a3f47a22582edbd7c28d
      imagePullPolicy: IfNotPresent
      name: ocp101-demo
      ports:
      - containerPort: 3000
        protocol: TCP
      resources:
        limits:
          cpu: 250m
          memory: 1Gi
        requests:
          cpu: 100m
          memory: 256Mi
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
        runAsUser: 1005480000
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: default-token-jwchd
        readOnly: true
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: default-dockercfg-8qnlx
    nodeName: ociopf-p-186.dmz
    nodeSelector:
      region: app
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 1005480000
      seLinuxOptions:
        level: s0:c74,c39
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoSchedule
      key: node.kubernetes.io/memory-pressure
      operator: Exists
    volumes:
    - name: default-token-jwchd
      secret:
        defaultMode: 420
        secretName: default-token-jwchd
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: 2020-03-12T20:37:56Z
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: 2020-03-12T20:38:22Z
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: null
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: 2020-03-12T20:37:55Z
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: docker://c45ec8f6c231f120cdfbb94c16b6a25f9bbdbce4ccd15b76c24b70dfce59667b
      image: docker-registry.default.svc:5000/ocp101a-tools/ocp101-demo@sha256:d01b7dcd1d8c710ce0c1cd6f4b0d22ff560d8dbbebc0a3f47a22582edbd7c28d
      imageID: docker-pullable://docker-registry.default.svc:5000/ocp101a-tools/ocp101-demo@sha256:d01b7dcd1d8c710ce0c1cd6f4b0d22ff560d8dbbebc0a3f47a22582edbd7c28d
      lastState: {}
      name: ocp101-demo
      ready: true
      restartCount: 0
      state:
        running:
          startedAt: 2020-03-12T20:38:22Z
    hostIP: 142.34.143.172
    phase: Running
    podIP: 172.51.70.176
    qosClass: Burstable
    startTime: 2020-03-12T20:37:56Z
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      kubectl.kubernetes.io/original-replicas: "1"
      openshift.io/deployer-pod.completed-at: 2020-03-12 13:34:50 -0700 PDT
      openshift.io/deployer-pod.created-at: 2020-03-12 13:34:08 -0700 PDT
      openshift.io/deployer-pod.name: ocp101-demo-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: ocp101-demo
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"apps.openshift.io/v1","metadata":{"name":"ocp101-demo","namespace":"ocp101a-dev","selfLink":"/apis/apps.openshift.io/v1/namespaces/ocp101a-dev/deploymentconfigs/ocp101-demo","uid":"d1fda637-64a0-11ea-bbab-0050568348cc","resourceVersion":"1654879592","generation":2,"creationTimestamp":"2020-03-12T20:34:06Z","labels":{"app":"ocp101-demo"},"annotations":{"kubectl.kubernetes.io/last-applied-configuration":"{\"apiVersion\":\"apps.openshift.io/v1\",\"ki [...]
    creationTimestamp: 2020-03-12T20:34:08Z
    generation: 3
    labels:
      app: ocp101-demo
      openshift.io/deployment-config.name: ocp101-demo
    name: ocp101-demo-1
    namespace: ocp101a-dev
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: ocp101-demo
      uid: d1fda637-64a0-11ea-bbab-0050568348cc
    resourceVersion: "1654887356"
    selfLink: /api/v1/namespaces/ocp101a-dev/replicationcontrollers/ocp101-demo-1
    uid: d2ba0a5c-64a0-11ea-b2ea-005056832285
  spec:
    replicas: 0
    selector:
      app: ocp101-demo
      deployment: ocp101-demo-1
      deploymentconfig: ocp101-demo
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: ocp101-demo
          openshift.io/deployment.name: ocp101-demo-1
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: ocp101-demo
          deployment: ocp101-demo-1
          deploymentconfig: ocp101-demo
      spec:
        containers:
        - image: docker-registry.default.svc:5000/ocp101a-tools/ocp101-demo@sha256:d01b7dcd1d8c710ce0c1cd6f4b0d22ff560d8dbbebc0a3f47a22582edbd7c28d
          imagePullPolicy: IfNotPresent
          name: ocp101-demo
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    observedGeneration: 3
    replicas: 0
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.completed-at: 2020-03-12 13:38:41 -0700 PDT
      openshift.io/deployer-pod.created-at: 2020-03-12 13:37:12 -0700 PDT
      openshift.io/deployer-pod.name: ocp101-demo-2-deploy
      openshift.io/deployment-config.latest-version: "2"
      openshift.io/deployment-config.name: ocp101-demo
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: ""
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"apps.openshift.io/v1","metadata":{"name":"ocp101-demo","namespace":"ocp101a-dev","selfLink":"/apis/apps.openshift.io/v1/namespaces/ocp101a-dev/deploymentconfigs/ocp101-demo","uid":"d1fda637-64a0-11ea-bbab-0050568348cc","resourceVersion":"1654885173","generation":3,"creationTimestamp":"2020-03-12T20:34:06Z","labels":{"app":"ocp101-demo"},"annotations":{"kubectl.kubernetes.io/last-applied-configuration":"{\"apiVersion\":\"apps.openshift.io/v1\",\"ki [...]
    creationTimestamp: 2020-03-12T20:37:12Z
    generation: 2
    labels:
      app: ocp101-demo
      openshift.io/deployment-config.name: ocp101-demo
    name: ocp101-demo-2
    namespace: ocp101a-dev
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: ocp101-demo
      uid: d1fda637-64a0-11ea-bbab-0050568348cc
    resourceVersion: "1654888387"
    selfLink: /api/v1/namespaces/ocp101a-dev/replicationcontrollers/ocp101-demo-2
    uid: 406d0e95-64a1-11ea-b2ea-005056832285
  spec:
    replicas: 1
    selector:
      app: ocp101-demo
      deployment: ocp101-demo-2
      deploymentconfig: ocp101-demo
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "2"
          openshift.io/deployment-config.name: ocp101-demo
          openshift.io/deployment.name: ocp101-demo-2
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: ocp101-demo
          deployment: ocp101-demo-2
          deploymentconfig: ocp101-demo
      spec:
        containers:
        - image: docker-registry.default.svc:5000/ocp101a-tools/ocp101-demo@sha256:d01b7dcd1d8c710ce0c1cd6f4b0d22ff560d8dbbebc0a3f47a22582edbd7c28d
          imagePullPolicy: IfNotPresent
          name: ocp101-demo
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    fullyLabeledReplicas: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"},"labels":{"app":"ocp101-demo","version":"foo"},"name":"ocp101-demo","namespace":"ocp101a-dev"},"spec":{"ports":[{"name":"8080-tcp","port":8080,"protocol":"TCP","targetPort":3000}],"selector":{"app":"ocp101-demo","deploymentconfig":"ocp101-demo"}}}
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: 2020-03-12T20:34:06Z
    labels:
      app: ocp101-demo
      version: foo
    name: ocp101-demo
    namespace: ocp101a-dev
    resourceVersion: "1654879543"
    selfLink: /api/v1/namespaces/ocp101a-dev/services/ocp101-demo
    uid: d20bf28f-64a0-11ea-bbab-0050568348cc
  spec:
    clusterIP: 172.50.4.235
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 3000
    selector:
      app: ocp101-demo
      deploymentconfig: ocp101-demo
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","metadata":{"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"},"labels":{"app":"ocp101-demo"},"name":"ocp101-demo","namespace":"ocp101a-dev"},"spec":{"replicas":1,"selector":{"app":"ocp101-demo","deploymentconfig":"ocp101-demo"},"strategy":{"resources":{}},"template":{"metadata":{"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"},"creationTimestamp":null,"labels":{"app":"ocp101-demo","deploymentconfig":" [...]
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: 2020-03-12T20:34:06Z
    generation: 3
    labels:
      app: ocp101-demo
    name: ocp101-demo
    namespace: ocp101a-dev
    resourceVersion: "1654888390"
    selfLink: /apis/apps.openshift.io/v1/namespaces/ocp101a-dev/deploymentconfigs/ocp101-demo
    uid: d1fda637-64a0-11ea-bbab-0050568348cc
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: ocp101-demo
      deploymentconfig: ocp101-demo
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: ocp101-demo
          deploymentconfig: ocp101-demo
      spec:
        containers:
        - image: docker-registry.default.svc:5000/ocp101a-tools/ocp101-demo@sha256:d01b7dcd1d8c710ce0c1cd6f4b0d22ff560d8dbbebc0a3f47a22582edbd7c28d
          imagePullPolicy: IfNotPresent
          name: ocp101-demo
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - ocp101-demo
        from:
          kind: ImageStreamTag
          name: ocp101-demo:latest
          namespace: ocp101a-tools
        lastTriggeredImage: docker-registry.default.svc:5000/ocp101a-tools/ocp101-demo@sha256:d01b7dcd1d8c710ce0c1cd6f4b0d22ff560d8dbbebc0a3f47a22582edbd7c28d
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: 2020-03-12T20:34:45Z
      lastUpdateTime: 2020-03-12T20:34:45Z
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: 2020-03-12T20:38:23Z
      lastUpdateTime: 2020-03-12T20:38:59Z
      message: replication controller "ocp101-demo-2" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 2
    observedGeneration: 3
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: 2020-03-12T20:36:28Z
    labels:
      app: ocp101-demo
      version: foo
    name: ocp101-demo
    namespace: ocp101a-dev
    resourceVersion: "1654883832"
    selfLink: /apis/route.openshift.io/v1/namespaces/ocp101a-dev/routes/ocp101-demo
    uid: 2627609b-64a1-11ea-bbab-0050568348cc
  spec:
    host: ocp101-demo-ocp101a-dev.pathfinder.gov.bc.ca
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: ocp101-demo
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2020-03-12T20:36:28Z
        status: "True"
        type: Admitted
      host: ocp101-demo-ocp101a-dev.pathfinder.gov.bc.ca
      routerName: router
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
